k8s/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-portfolio-dev
  namespace: web-portfolio-dev
  labels:
    app.kubernetes.io/name: web-portfolio
    app.kubernetes.io/component: dev-environment
spec:
  type: NodePort
  selector:
    app: web-portfolio-dev
  ports:
    # Vite dev server
    - name: vite-dev
      port: 5173
      targetPort: vite-dev
      nodePort: 30173  # Access at http://$(minikube ip):30173
      protocol: TCP
    # Vite preview
    - name: vite-preview
      port: 4173
      targetPort: vite-preview
      nodePort: 30174
      protocol: TCP
    # Storybook
    - name: storybook
      port: 6006
      targetPort: storybook
      nodePort: 30606
      protocol: TCP
